--- a/Kunja/Kunja/bin/Kunja.dll.config
+++ b/Kunja/Kunja/bin/Kunja.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Kunja-20180913111014.mdf;Initial Catalog=aspnet-Kunja-20180913111014;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=SQL6004.site4now.net;Initial Catalog=DB_A3D6D6_KunjaRens;User Id=DB_A3D6D6_KunjaRens_admin;Password=RG7S48bPuEscyz4k;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
