--- a/Kunja/Kunja/Kunja.csproj
+++ b/Kunja/Kunja/Kunja.csproj
@@ -221,6 +221,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\Bedroom villa.jpg" />
+    <Content Include="images\villa1.jpg" />
+    <Content Include="images\villa2.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
