--- a/Kunja/Kunja/Web.config
+++ b/Kunja/Kunja/Web.config
@@ -9,10 +9,13 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=SQL6004.site4now.net;Initial Catalog=DB_A3D6D6_KunjaRens;User Id=DB_A3D6D6_KunjaRens_admin;Password=RG7S48bPuEscyz4k;" providerName="System.Data.SqlClient" />
+   
+    <!--<add name="DefaultConnection" connectionString="Data Source=SQL6004.site4now.net;Initial Catalog=DB_A3D6D6_KunjaRens;User Id=DB_A3D6D6_KunjaRens_admin;Password=RG7S48bPuEscyz4k;" providerName="System.Data.SqlClient" />
     <add name="DB_A3D6D6_KunjaRensEntities" connectionString="metadata=res://*/Models.oof.csdl|res://*/Models.oof.ssdl|res://*/Models.oof.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL6004.site4now.net;initial catalog=DB_A3D6D6_KunjaRens;user id=DB_A3D6D6_KunjaRens_admin;password=RG7S48bPuEscyz4k;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="DB_A3D6D6_KunjaRensEntities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL6004.site4now.net;initial catalog=DB_A3D6D6_KunjaRens;user id=DB_A3D6D6_KunjaRens_admin;password=RG7S48bPuEscyz4k;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  
+  <add name="DB_A3D6D6_KunjaRensEntities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL6004.site4now.net;initial catalog=DB_A3D6D6_KunjaRens;user id=DB_A3D6D6_KunjaRens_admin;password=RG7S48bPuEscyz4k;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+  <add name="DB_A3D6D6_KunjaRensEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL6004.site4now.net;initial catalog=DB_A3D6D6_KunjaRens;user id=DB_A3D6D6_KunjaRens_admin;password=RG7S48bPuEscyz4k;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
